--- a/popup.html
+++ b/popup.html
@@ -13,12 +13,18 @@
 
 <body>
     <b>
-        <input type="checkbox" id="pauseSwitch">Pause autoraiders</label><br>
-        <input type="checkbox" id="scrollSwitch">Buy scrolls</label><br>
-        <input type="checkbox" id="potionSwitch">Use potions when at 100</label><br>
+
+        <input type="checkbox" id="pauseSwitch"><s>Pause autoraiders</s></label><br>
+        <input type="checkbox" id="scrollSwitch"><s>Buy scrolls</s></label><br>
+        <input type="checkbox" id="questSwitch"><s>Collect quests</s></label><br>
         <input type="checkbox" id="uncommonSwitch">Use uncommon units</label><br>
         <input type="checkbox" id="rareSwitch">Use rare units</label><br>
-        <input type="checkbox" id="legendarySwitch">Use legendary units</label>
+        <input type="checkbox" id="legendarySwitch">Use legendary units</label><br><br>
+        <label>POTIONS</label><br>
+        <label><input type="radio" name="potion" value="0"> No potions</label><br>
+        <label> <input type="radio" name="potion" value="1"> Potions at 45 </label><br>
+        <label><input type="radio" name="potion" value="2"> Potions at 100</label><br>
     </b>
 </body>
+
 </html>
