--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,8 @@
         <input type="checkbox" id="questSwitch"><s>Collect quests</s></label><br>
         <input type="checkbox" id="uncommonSwitch">Use uncommon units</label><br>
         <input type="checkbox" id="rareSwitch">Use rare units</label><br>
-        <input type="checkbox" id="legendarySwitch">Use legendary units</label><br><br>
+        <input type="checkbox" id="legendarySwitch">Use legendary units</label><br>
+        
         <label>POTIONS</label><br>
         <label><input type="radio" name="potion" value="0"> No potions</label><br>
         <label> <input type="radio" name="potion" value="1"> Potions at 45 </label><br>
