--- a/popup.html
+++ b/popup.html
@@ -15,8 +15,8 @@
     <b>
 
         <input type="checkbox" id="pauseSwitch"><s>Pause autoraiders</s></label><br>
-        <input type="checkbox" id="scrollSwitch"><s>Buy scrolls</s></label><br>
-        <input type="checkbox" id="questSwitch"><s>Collect quests</s></label><br>
+        <input type="checkbox" id="scrollSwitch">Buy scrolls</label><br>
+        <input type="checkbox" id="questSwitch">Collect quests</label><br>
         <input type="checkbox" id="uncommonSwitch">Use uncommon units</label><br>
         <input type="checkbox" id="rareSwitch">Use rare units</label><br>
         <input type="checkbox" id="legendarySwitch">Use legendary units</label><br>
