--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,7 @@
         <input type="checkbox" id="pauseSwitch"><s>Pause autoraiders</s></label><br>
         <input type="checkbox" id="scrollSwitch">Buy scrolls</label><br>
         <input type="checkbox" id="questSwitch">Collect quests</label><br>
+        <input type="checkbox" id="commonSwitch">Use common</label><br>
         <input type="checkbox" id="uncommonSwitch">Use uncommon units</label><br>
         <input type="checkbox" id="rareSwitch">Use rare units</label><br>
         <input type="checkbox" id="legendarySwitch">Use legendary units</label><br>
