--- a/popup.html
+++ b/popup.html
@@ -13,15 +13,17 @@
 
 <body>
     <b>
-
-        <input type="checkbox" id="pauseSwitch"><s>Pause autoraiders</s></label><br>
+        
         <input type="checkbox" id="scrollSwitch">Buy scrolls</label><br>
+        <input type="checkbox" id="extraSwitch">Buy extra $100 scrolls</label><br>
         <input type="checkbox" id="questSwitch">Collect quests</label><br>
         <input type="checkbox" id="commonSwitch">Use common</label><br>
         <input type="checkbox" id="uncommonSwitch">Use uncommon units</label><br>
         <input type="checkbox" id="rareSwitch">Use rare units</label><br>
         <input type="checkbox" id="legendarySwitch">Use legendary units</label><br>
-        
+        <input type="checkbox" id="duelSwitch">Unlimited duels</label><br>
+        <input type="checkbox" id="clashSwitch">Unlimited clashes</label><br>
+        <input type="checkbox" id="dungeonSwitch">Unlimited dungeons</label><br>
         <label>POTIONS</label><br>
         <label><input type="radio" name="potion" value="0"> No potions</label><br>
         <label> <input type="radio" name="potion" value="1"> Potions at 45 </label><br>
