--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <script src="popup.js"></script>
     <style>
         body {
-            width: 200px
+            width: 250px
         }
     </style>
 </head>
@@ -17,6 +17,7 @@
         <input type="checkbox" id="scrollSwitch">Buy scrolls</label><br>
         <input type="checkbox" id="extraSwitch">Buy extra $100 scrolls</label><br>
         <input type="checkbox" id="questSwitch">Collect quests</label><br>
+        <input type="checkbox" id="loyaltySwitch">Preserve gold loyalty</label><br>
         <input type="checkbox" id="commonSwitch">Use common</label><br>
         <input type="checkbox" id="uncommonSwitch">Use uncommon units</label><br>
         <input type="checkbox" id="rareSwitch">Use rare units</label><br>
@@ -27,7 +28,11 @@
         <label>POTIONS</label><br>
         <label><input type="radio" name="potion" value="0"> No potions</label><br>
         <label> <input type="radio" name="potion" value="1"> Potions at 45 </label><br>
-        <label><input type="radio" name="potion" value="2"> Potions at 100</label><br>
+        <label><input type="radio" name="potion" value="2"> Potions at 100</label><br><br>
+        <b>Color code:</b><br>
+        &#128997 Captain switched to Campaign mode<br>
+        &#129002 There aren't any units that match any of the markers<br>
+        &#129000 Captain loyalty isn't gold<br>
     </b>
 </body>
 
