--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
         <input type="checkbox" id="extraSwitch">Buy extra $100 scrolls</label><br>
         <input type="checkbox" id="questSwitch">Collect quests</label><br>
         <input type="checkbox" id="loyaltySwitch">Preserve gold loyalty</label><br>
-        <input type="checkbox" id="commonSwitch">Use common</label><br>
+        <input type="checkbox" id="commonSwitch">Use common units</label><br>
         <input type="checkbox" id="uncommonSwitch">Use uncommon units</label><br>
         <input type="checkbox" id="rareSwitch">Use rare units</label><br>
         <input type="checkbox" id="legendarySwitch">Use legendary units</label><br>
