--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,8 @@
 
 <body>
     <b>
-        
+        <br>DISCLAIMER: For the switches to work the SR tab must be selected otherwise a<br>
+        connection between this popup and the main script can not be stablished<br>
         <input type="checkbox" id="scrollSwitch">Buy scrolls</label><br>
         <input type="checkbox" id="extraSwitch">Buy extra $100 scrolls</label><br>
         <input type="checkbox" id="questSwitch">Collect quests</label><br>
