--- a/popup.html
+++ b/popup.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <b>
-        <br>DISCLAIMER: For the switches to work the SR tab must be selected otherwise a<br>
-        connection between this popup and the main script can not be stablished<br>
+    <b><br>
+        <div  style="text-align: justify;">DISCLAIMER: For the switches to work the SR tab must be active in view otherwise a
+        connection between this popup and the main script can not be stablished<br></div>
         <input type="checkbox" id="scrollSwitch">Buy scrolls</label><br>
         <input type="checkbox" id="extraSwitch">Buy extra $100 scrolls</label><br>
         <input type="checkbox" id="questSwitch">Collect quests</label><br>
@@ -30,7 +30,7 @@
         <label><input type="radio" name="potion" value="0"> No potions</label><br>
         <label> <input type="radio" name="potion" value="1"> Potions at 45 </label><br>
         <label><input type="radio" name="potion" value="2"> Potions at 100</label><br><br>
-        <b>Color code:</b><br>
+        Color code:<br>
         &#128997 Captain switched to Campaign mode<br>
         &#129002 There aren't any units that match any of the markers<br>
         &#129000 Captain loyalty isn't gold<br>
