--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,7 @@
         <input type="checkbox" id="scrollSwitch">Buy scrolls</label><br>
         <input type="checkbox" id="extraSwitch">Buy extra $100 scrolls</label><br>
         <input type="checkbox" id="questSwitch">Collect quests</label><br>
+        <input type="checkbox" id="battlepassSwitch">Collect battlepass</label><br>
         <input type="checkbox" id="loyaltySwitch">Preserve gold loyalty</label><br>
         <input type="checkbox" id="commonSwitch">Use common units</label><br>
         <input type="checkbox" id="uncommonSwitch">Use uncommon units</label><br>
