Switch idling captains

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,8 @@
     <b><br>
         <div style="text-align: justify;">DISCLAIMER: For the switches to work the SR tab must be active in view
             otherwise a connection between this popup and the main script cannot be established<br></div>
+        <label for="offlineSwitch"><input type="checkbox" id="offlineSwitch"> Switch idle captain <div
+                class="tooltip">?<span class="tooltiptext">When enabled switch captains if they idle for more than 15 minutes combined (find battle + start battle + collect reward)</span></div></label><br>
         <label for="scrollSwitch"><input type="checkbox" id="scrollSwitch"> Buy scrolls</label><br>
         <label for="extraSwitch"><input type="checkbox" id="extraSwitch"> Buy extra $100 scrolls</label><br>
         <label for="questSwitch"><input type="checkbox" id="questSwitch"> Collect quests</label><br>
