Scroller and loyalty skip

--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,8 @@
     <b><br>
         <div style="text-align: justify;">DISCLAIMER: For the switches to work the SR tab must be active in view
             otherwise a connection between this popup and the main script cannot be established<br></div>
-        <label for="offlineSwitch"><input type="checkbox" id="offlineSwitch"> Switch idle captain</label><br>
+        <label for="offlineSwitch"><input type="checkbox" id="offlineSwitch"> Switch idle captain</label>
+        <label for="skipSwitch"><input type="checkbox" id="skipSwitch"> skip captains without loyalty</label><br>
         <label for="scrollSwitch"><input type="checkbox" id="scrollSwitch"> Buy scrolls</label><br>
         <label for="extraSwitch"><input type="checkbox" id="extraSwitch"> Buy extra $100 scrolls</label><br>
         <label for="questSwitch"><input type="checkbox" id="questSwitch"> Collect quests</label><br>
