Improvements to pause handler

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            width: 300px
+            width: 300px;
         }
     </style>
 </head>
@@ -17,7 +17,7 @@
         <div style="text-align: justify;">DISCLAIMER: For the switches to work the SR tab must be active in view
             otherwise a connection between this popup and the main script cannot be established<br></div>
         <label for="offlineSwitch"><input type="checkbox" id="offlineSwitch"> Switch idle captain</label>
-        <label for="skipSwitch"><input type="checkbox" id="skipSwitch"> skip captains without loyalty</label><br>
+        <label for="skipSwitch"><input type="checkbox" id="skipSwitch"> Leave slot empty if there aren't any loyalty captains to switch</label><br>
         <label for="scrollSwitch"><input type="checkbox" id="scrollSwitch"> Buy scrolls</label><br>
         <label for="extraSwitch"><input type="checkbox" id="extraSwitch"> Buy extra $100 scrolls</label><br>
         <label for="questSwitch"><input type="checkbox" id="questSwitch"> Collect quests</label><br>
