Individual offline switches.

--- a/popup.html
+++ b/popup.html
@@ -21,6 +21,7 @@
         <label for="scrollSwitch"><input type="checkbox" id="scrollSwitch"> Buy scrolls</label><br>
         <label for="extraSwitch"><input type="checkbox" id="extraSwitch"> Buy extra $100 scrolls</label><br>
         <label for="questSwitch"><input type="checkbox" id="questSwitch"> Collect quests</label><br>
+        <label for="dailySwitch"><input type="checkbox" id="dailySwitch"> Collect daily reward</label><br>
         <label for="battlepassSwitch"><input type="checkbox" id="battlepassSwitch"> Collect battlepass</label><br>
         <label for="loyaltySwitch"><input type="checkbox" id="loyaltySwitch"> Preserve gold loyalty <div
                 class="tooltip">?<span class="tooltiptext">There's a cap on loyalty chests, when enabled those chests
