--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,7 @@
 
 <body>
     <b><br>
+        <a href="https://heart-breakone.github.io/auto-raiders/how_to_play.html" target="_blank">Instructions</a><br>
         <div style="text-align: justify;">DISCLAIMER: For the switches to work the SR tab must be active in view
             otherwise a connection between this popup and the main script cannot be established<br></div>
         <label for="offlineSwitch"><input type="checkbox" id="offlineSwitch"> Switch idle captain</label>
@@ -23,7 +24,7 @@
         <label for="questSwitch"><input type="checkbox" id="questSwitch"> Collect quests</label><br>
         <label for="dailySwitch"><input type="checkbox" id="dailySwitch"> Collect daily reward</label><br>
         <label for="battlepassSwitch"><input type="checkbox" id="battlepassSwitch"> Collect battlepass</label><br>
-        <label for="loyaltySwitch"><input type="checkbox" id="loyaltySwitch"> Preserve gold loyalty <div
+        <label for="loyaltySwitch"><input type="checkbox" id="loyaltySwitch"> Preserve diamond loyalty <div
                 class="tooltip">?<span class="tooltiptext">There's a cap on loyalty chests, when enabled those chests
                     will be skipped if loyalty isn't gold</span></div></label><br>
         <label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use common units</label><br>
