Improved reload mechanism. Randomized captains.

--- a/popup.html
+++ b/popup.html
@@ -40,7 +40,7 @@
         Color code:<br>
         &#128997; Captain switched to Campaign mode<br>
         &#129002; There aren't any units that match any of the markers<br>
-        &#129000; Captain loyalty isn't gold<br>
+        &#129000; Captain loyalty isn't diamond<br>
     </b>
 </body>
 
