--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
 
 <body>
     <b><br>
-        <a href="https://heart-breakone.github.io/auto-raiders/how_to_play.html" target="_blank">Instructions</a><br>
+        <a href="https://heart-breakone.github.io/webpages/how_to_play.html" target="_blank">Instructions</a><br>
         <div style="text-align: justify;">DISCLAIMER: For the switches to work the SR tab must be active in view
             otherwise a connection between this popup and the main script cannot be established<br></div>
         <label for="offlineSwitch"><input type="checkbox" id="offlineSwitch"> Switch idle captain</label>
