--- a/log.html
+++ b/log.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Extension Options Page</h1>
 
+    <button id="wipeButton">Wipe logData</button>
+    
     <div id="dataContainer"></div>
 
     <script src="options.js"></script>
