--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,8 @@
 
 <body>
     <b><br>
-        <a href="https://heart-breakone.github.io/webpages/how_to_play.html" target="_blank">Instructions</a><br>
+        <a href="https://heart-breakone.github.io/webpages/how_to_play.html" target="_blank">Instructions</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="chrome-extension://oopcdcbbmehdbjlkcnbjmlnpodmohkfc/log.html" id="battle_log" target="_blank">Battle
+            log</a><br></br>
         <div style="text-align: justify;">DISCLAIMER: For the switches to work the SR tab must be active in view
             otherwise a connection between this popup and the main script cannot be established<br></div>
         <label for="offlineSwitch"><input type="checkbox" id="offlineSwitch"> Switch idle captain</label>
