Dynamically resize text, fix color code ambiguity

--- a/log.html
+++ b/log.html
@@ -7,15 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Log</title>
     <script src="options.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
 <body>
     <div class="center-container">
         <h1>This is your battle log</h1>
-        <h2>Unknown time and result means the extension couldn't get a battle closure, this generally means that
-            the<br>
-            battle was manually abandoned or the reward chest manually collected.</h2>
+        <h2>Unknown time and result means the extension couldn't get a battle closure, this generally means that the battle was manually abandoned or the reward chest manually collected.</h2>
         <button id="wipeButton">Delete log</button><br><br>
     </div>
     <div id="dataContainer"></div><br><br>
