Buttons for the log

--- a/log.html
+++ b/log.html
@@ -15,7 +15,10 @@
         <h1>This is your battle log</h1>
         <h2>Unknown time and result means the extension couldn't get a battle closure, this generally means that the battle was manually abandoned or the reward chest manually collected.</h2>
         <h2>Duration is the time in minutes from when placement started up to the time the captain handed out the chest rewards</h2>
-        <button id="wipeButton">Delete log</button><br><br>
+        <div>
+            <button id="updateLogButton">Update Log</button>
+            <button id="deleteLogButton">Delete log</button><br><br>
+        </div>
     </div>
     <div id="dataContainer"></div><br><br>
 
