--- a/log.html
+++ b/log.html
@@ -45,10 +45,14 @@
         </div>
     </div>
     <div class="center-container">
-        <h2>Export and import your settings, captains lists and log here<br>WARNING: IMPORTING OVERWRITES THE CURRENT DATA</h2>
-        <button id="exportButton" class="green_button" style="font-weight: normal">Export your settings to file</button>
-        <button id="importButton" class="green_button" style="font-weight: normal">Import your setting from file</button>
-        <input type="file" id="file-input">
+        <h2>Export and import your settings, captains lists and log here<br>WARNING: IMPORTING OVERWRITES THE CURRENT
+            DATA</h2>
+        <button id="exportButton" class="green_button">Export your settings to file</button>
+        <div class="file-input-container">
+            <label for="file-input" class="green_button">Import your settings from file</label>
+            <input type="file" id="file-input">
+        </div>
     </div>
 </body>
+
 </html>
