--- a/log.html
+++ b/log.html
@@ -31,6 +31,7 @@
             <li>Blacklisted captains will be ignored, unless they are the only ones in the Any Captains list.</li>
             <li>Write the name of the Captains with a space in between</li>
             <li>The order you write the captains is the order of their priority</li>
+            <li>When you blacklist a captain, make sure they are not in the in-game favorites list</li>
             <li>Uppercasing and lowercasing don't matter, but the captain name MUST be typed correctly (e.g CaptainZ1,
                 captainz1, CAPTAINZ1 are all valid because their only difference is the casing)</li>
         </ul>
