Fixing log. Split log and whitelist

--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,7 @@
         <div class="button_container">
             <button id="instructions_button">Instructions</button>
             <button id="log_button">Log</button>
+            <button id="whitelist_button">Whitelist</button>
         </div>
         <div style="text-align: justify;">DISCLAIMER: For the switches to work the SR tab must be active in view
             otherwise a connection between this popup and the main script cannot be established<br></div>
