--- a/log.html
+++ b/log.html
@@ -21,39 +21,10 @@
             <button id="updateLogButton" class="green_button">Update Log</button>
             <button id="deleteLogButton" class="green_button">Delete log</button><br><br>
         </div>
+        <h3>Loyalty Chest counter</h3>
+        <div class="counter-container"></div>
     </div>
     <div id="dataContainer"></div><br><br>
-    <div class="bulleted-list">
-        <h1>Whitelist and blacklist captains here</h1>
-        <ul>
-            <li>When switching an idle captain the order of priority is: Diamond > Gold > Silver > Bronze > Whitelist >
-                Favorites > Any captain</li>
-            <li>Blacklisted captains will be ignored, unless they are the only ones in the Any Captains list.</li>
-            <li>Write the name of the Captains with a space in between</li>
-            <li>The order you write the captains is the order of their priority</li>
-            <li>When you blacklist a captain, make sure they are not in the in-game favorites list</li>
-            <li>Uppercasing and lowercasing don't matter, but the captain name MUST be typed correctly (e.g CaptainZ1,
-                captainz1, CAPTAINZ1 are all valid because their only difference is the casing)</li>
-        </ul>
-        <div>
-            <label>Whitelist:</label><br>
-            <textarea id="whitelist" name="whitelist" placeholder="captain1 captain2 captain3 captain4"></textarea><br>
-            <button id="whitelist_button">Whitelist</button>
-            <br>
-            <label>Blacklist:</label><br>
-            <textarea id="blacklist" name="blacklist" placeholder="captain1 captain2 captain3 captain4"></textarea><br>
-            <button id="blacklist_button">Blacklist</button>
-        </div>
-    </div>
-    <div class="center-container">
-        <h2>Export and import your settings, captains lists and log here<br>WARNING: IMPORTING OVERWRITES THE CURRENT
-            DATA</h2>
-        <button id="exportButton" class="green_button">Export your settings to file</button>
-        <div class="file-input-container">
-            <label for="file-input" class="green_button">Import your settings from file</label>
-            <input type="file" id="file-input">
-        </div>
-    </div>
 </body>
 
 </html>
