--- a/whitelist.html
+++ b/whitelist.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Battle Log</title>
+    <title>Whitelist</title>
     <script src="whitelist.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
