--- a/popup.html
+++ b/popup.html
@@ -31,6 +31,7 @@
         <label for="dailySwitch"><input type="checkbox" id="dailySwitch"> Collect daily reward</label><br>
         <label for="battlepassSwitch"><input type="checkbox" id="battlepassSwitch"> Collect battlepass</label><br>
         <label for="loyaltySwitch"><input type="checkbox" id="loyaltySwitch"> Preserve diamond loyalty</label><br>
+        <label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label><br>
         <label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use common units</label><br>
         <label for="uncommonSwitch"><input type="checkbox" id="uncommonSwitch"> Use uncommon units</label><br>
         <label for="rareSwitch"><input type="checkbox" id="rareSwitch"> Use rare units</label><br>
