--- a/whitelist.html
+++ b/whitelist.html
@@ -38,8 +38,8 @@
             DATA</h2>
         <button id="exportButton" class="green_button">Export your settings to file</button>
         <div class="file-input-container">
-            <label for="file-input" class="green_button">Import your settings from file</label>
-            <input type="file" id="file-input">
+            <label for="settings-file-input" class="green_button">Import your settings from file</label>
+            <input type="file" id="settings-file-input">
         </div>
     </div>
 </body>
