--- a/html/log.html
+++ b/html/log.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Log</title>
-    <script src="log.js"></script>
+    <script src="/javascript/log.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
