--- a/html/whitelist.html
+++ b/html/whitelist.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitelist</title>
-    <script src="javascript/whitelist.js"></script>
+    <script src="/javascript/whitelist.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
