--- a/html/whitelist.html
+++ b/html/whitelist.html
@@ -30,6 +30,9 @@
             <br>
             <label>Blacklist:</label><br>
             <textarea id="blacklist" name="blacklist" placeholder="captain1 captain2 captain3 captain4"></textarea><br>
+            <br>
+            <label>Potion whitelist (ENABLE ON THE SETTINGS):</label><br>
+            <textarea id="potionlist" name="potionlist" placeholder="captain1 captain2 captain3 captain4"></textarea><br>
         </div>
     </div>
     <div class="center-container">
