--- a/iframe.html
+++ b/iframe.html
@@ -50,7 +50,7 @@
             <tr>
                 <td><label for="clashSwitch"><input type="checkbox" id="clashSwitch"> Unlimited clashes</label></td>
                 <td><label for="dungeonSwitch"><input type="checkbox" id="dungeonSwitch"> Unlimited dungeons</label></td>
-                <td></td>
+                <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions whitelist only</label></td>
             </tr>
             <tr>
                 <td><label><input type="radio" name="potion" value="0"> No potions</label></td>
