Scroll up button

--- a/html/log.html
+++ b/html/log.html
@@ -30,6 +30,7 @@
         <div class="counter-container"></div>
     </div>
     <div id="dataContainer"></div><br><br>
+    <button id="scrollBtn" title="Go to top">Up</button>
 </body>
 
 </html>
