Unlimited campaign switch

--- a/iframe.html
+++ b/iframe.html
@@ -50,8 +50,13 @@
             <tr>
                 <td><label for="clashSwitch"><input type="checkbox" id="clashSwitch"> Unlimited clashes</label></td>
                 <td><label for="dungeonSwitch"><input type="checkbox" id="dungeonSwitch"> Unlimited dungeons</label></td>
-                <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions whitelist only</label></td>
+                <td><label for="campaignSwitch"><input type="checkbox" id="campaignSwitch"> Unlimited Campaign</label></td>
             </tr>
+            <tr>
+                <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions whitelist only</label></td>
+                <td></td>
+                <td></td>
+            </tr>    
             <tr>
                 <td><label><input type="radio" name="potion" value="0"> No potions</label></td>
                 <td><label><input type="radio" name="potion" value="1"> Potions at 45</label></td>
