--- a/iframe.html
+++ b/iframe.html
@@ -35,33 +35,43 @@
             <tr>
                 <td><label for="dailySwitch"><input type="checkbox" id="dailySwitch"> Collect daily reward</label></td>
                 <td><label for="battlepassSwitch"><input type="checkbox" id="battlepassSwitch"> Collect battlepass</label></td>
-                <td><label for="loyaltySwitch"><input type="checkbox" id="loyaltySwitch"> Preserve diamond loyalty</label></td>
+                <td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
             </tr>
             <tr>
-                <td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
                 <td><label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use common units</label></td>
                 <td><label for="uncommonSwitch"><input type="checkbox" id="uncommonSwitch"> Use uncommon units</label></td>
+                <td><label for="rareSwitch"><input type="checkbox" id="rareSwitch"> Use rare units</label></td>
             </tr>
             <tr>
-                <td><label for="rareSwitch"><input type="checkbox" id="rareSwitch"> Use rare units</label></td>
                 <td><label for="legendarySwitch"><input type="checkbox" id="legendarySwitch"> Use legendary units</label></td>
+                <td><label for="campaignSwitch"><input type="checkbox" id="campaignSwitch"> Unlimited Campaign</label></td>
                 <td><label for="duelSwitch"><input type="checkbox" id="duelSwitch"> Unlimited duels</label></td>
             </tr>
             <tr>
                 <td><label for="clashSwitch"><input type="checkbox" id="clashSwitch"> Unlimited clashes</label></td>
                 <td><label for="dungeonSwitch"><input type="checkbox" id="dungeonSwitch"> Unlimited dungeons</label></td>
-                <td><label for="campaignSwitch"><input type="checkbox" id="campaignSwitch"> Unlimited Campaign</label></td>
+                <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions whitelist only</label></td>
             </tr>
             <tr>
-                <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions whitelist only</label></td>
+                <td><label for="loyaltySwitch"><input type="checkbox" id="loyaltySwitch"> Preserve diamond loyalty</label></td>
                 <td></td>
                 <td></td>
             </tr>    
             <tr>
+                <td><label><input type="radio" name="loyalty" value="0"> <s>Don't preserve loyalty</s></label></td>
+                <td><label><input type="radio" name="loyalty" value="1"> <s>Preserve if not bronze</s></label></td>
+                <td><label><input type="radio" name="loyalty" value="2"> <s>Preserve if not silver</s></label></td>
+            </tr>   
+            <tr>
+                <td><label><input type="radio" name="loyalty" value="3"> <s>Preserve if not gold</s></label></td>
+                <td><label><input type="radio" name="loyalty" value="4"> <s>Preserve if not diamond</s></label></td>
+                <td></td>
+            </tr>
+            <tr>
                 <td><label><input type="radio" name="potion" value="0"> No potions</label></td>
                 <td><label><input type="radio" name="potion" value="1"> Potions at 45</label></td>
                 <td><label><input type="radio" name="potion" value="2"> Potions at 100</label></td>
-            </tr>
+            </tr>s
         </tbody>
     </table>
 </body>
