--- a/iframe.html
+++ b/iframe.html
@@ -58,13 +58,13 @@
                 <td></td>
             </tr>    
             <tr>
-                <td><label><input type="radio" name="loyalty" value="0"> <s>Don't preserve loyalty</s></label></td>
-                <td><label><input type="radio" name="loyalty" value="1"> <s>Preserve if not bronze</s></label></td>
-                <td><label><input type="radio" name="loyalty" value="2"> <s>Preserve if not silver</s></label></td>
+                <td><label><input type="radio" name="loyalty" value="0"> Don't preserve loyalty</label></td>
+                <td><label><input type="radio" name="loyalty" value="1"> Preserve if not bronze</label></td>
+                <td><label><input type="radio" name="loyalty" value="2"> Preserve if not silver</label></td>
             </tr>   
             <tr>
-                <td><label><input type="radio" name="loyalty" value="3"> <s>Preserve if not gold</s></label></td>
-                <td><label><input type="radio" name="loyalty" value="4"> <s>Preserve if not diamond</s></label></td>
+                <td><label><input type="radio" name="loyalty" value="3"> Preserve if not gold</label></td>
+                <td><label><input type="radio" name="loyalty" value="4"> Preserve if not diamond</label></td>
                 <td></td>
             </tr>
             <tr>
