--- a/iframe.html
+++ b/iframe.html
@@ -1,5 +1,5 @@
-
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/styles/iframe_styles.css">
 </head>
 <main class="main"></main>
+
 <body>
     <table>
         <thead>
@@ -23,45 +24,49 @@
                 <td colspan="3"></td>
             </tr>
             <tr>
-                <td><label for="offlineSwitch"><input type="checkbox" id="offlineSwitch"> Switch idle captain</label></td>
-                <td><label for="skipSwitch"><input type="checkbox" id="skipSwitch"> Leave blank if no loyalty</label></td>
+                <td><label for="offlineSwitch"><input type="checkbox" id="offlineSwitch"> Switch idle captain</label>
+                </td>
+                <td><label for="skipSwitch"><input type="checkbox" id="skipSwitch"> Leave blank if no loyalty</label>
+                </td>
                 <td></td>
             </tr>
             <tr>
                 <td><label for="scrollSwitch"><input type="checkbox" id="scrollSwitch"> Buy scrolls</label></td>
-                <td><label for="extraSwitch"><input type="checkbox" id="extraSwitch"> Buy extra $100 scrolls</label></td>
+                <td><label for="extraSwitch"><input type="checkbox" id="extraSwitch"> Buy extra $100 scrolls</label>
+                </td>
                 <td><label for="questSwitch"><input type="checkbox" id="questSwitch"> Collect quests</label></td>
             </tr>
             <tr>
                 <td><label for="dailySwitch"><input type="checkbox" id="dailySwitch"> Collect daily reward</label></td>
-                <td><label for="battlepassSwitch"><input type="checkbox" id="battlepassSwitch"> Collect battlepass</label></td>
+                <td><label for="battlepassSwitch"><input type="checkbox" id="battlepassSwitch"> Collect
+                        battlepass</label></td>
                 <td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
             </tr>
             <tr>
                 <td><label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use common units</label></td>
-                <td><label for="uncommonSwitch"><input type="checkbox" id="uncommonSwitch"> Use uncommon units</label></td>
+                <td><label for="uncommonSwitch"><input type="checkbox" id="uncommonSwitch"> Use uncommon units</label>
+                </td>
                 <td><label for="rareSwitch"><input type="checkbox" id="rareSwitch"> Use rare units</label></td>
             </tr>
             <tr>
-                <td><label for="legendarySwitch"><input type="checkbox" id="legendarySwitch"> Use legendary units</label></td>
-                <td><label for="campaignSwitch"><input type="checkbox" id="campaignSwitch"> Unlimited Campaign</label></td>
+                <td><label for="legendarySwitch"><input type="checkbox" id="legendarySwitch"> Use legendary
+                        units</label></td>
+                <td><label for="campaignSwitch"><input type="checkbox" id="campaignSwitch"> Unlimited Campaign</label>
+                </td>
                 <td><label for="duelSwitch"><input type="checkbox" id="duelSwitch"> Unlimited duels</label></td>
             </tr>
             <tr>
                 <td><label for="clashSwitch"><input type="checkbox" id="clashSwitch"> Unlimited clashes</label></td>
-                <td><label for="dungeonSwitch"><input type="checkbox" id="dungeonSwitch"> Unlimited dungeons</label></td>
-                <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions whitelist only</label></td>
+                <td><label for="dungeonSwitch"><input type="checkbox" id="dungeonSwitch"> Unlimited dungeons</label>
+                </td>
+                <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions whitelist
+                        only</label></td>
             </tr>
-            <tr>
-                <td><label for="loyaltySwitch"><input type="checkbox" id="loyaltySwitch"> Preserve diamond loyalty</label></td>
-                <td></td>
-                <td></td>
-            </tr>    
             <tr>
                 <td><label><input type="radio" name="loyalty" value="0"> Don't preserve loyalty</label></td>
                 <td><label><input type="radio" name="loyalty" value="1"> Preserve if not bronze</label></td>
                 <td><label><input type="radio" name="loyalty" value="2"> Preserve if not silver</label></td>
-            </tr>   
+            </tr>
             <tr>
                 <td><label><input type="radio" name="loyalty" value="3"> Preserve if not gold</label></td>
                 <td><label><input type="radio" name="loyalty" value="4"> Preserve if not diamond</label></td>
@@ -75,4 +80,5 @@
         </tbody>
     </table>
 </body>
+
 </html>
